--- a/tiny/home.html
+++ b/tiny/home.html
@@ -1,7 +1,23 @@
-<html>
+<!-- <html>
 <head><title>test</title></head>
 <body> 
 <img align="middle" src="godzilla.gif">
 Dave O'Hallaron
 </body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Video Player</title>
+  </head>
+  <body>
+    <h1>Welcome to the Video Player</h1>
+    <video width="640" height="480" controls>
+      <source src="my_video.mpg" type="video/mpeg" />
+      Your browser does not support the video tag.
+    </video>
+  </body>
 </html>
