--- a/tiny/home.html
+++ b/tiny/home.html
@@ -1,12 +1,14 @@
 <!-- <html>
-<head><title>test</title></head>
-<body> 
-<img align="middle" src="godzilla.gif">
-Dave O'Hallaron
-</body>
+  <head>
+    <title>test</title>
+  </head>
+  <body>
+    <img align="middle" src="godzilla.gif" />
+    Dave O'Hallaron
+  </body>
 </html> -->
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -19,5 +21,55 @@ Dave O'Hallaron
       <source src="my_video.mpg" type="video/mpeg" />
       Your browser does not support the video tag.
     </video>
+  </body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <title>홈</title>
+  </head>
+  <body>
+    <h1>숫자 더하기</h1>
+    <form id="additionForm" onsubmit="return addNumbers();">
+      <input type="text" id="num1" placeholder="첫 번째 숫자" required />
+      <br />
+      <input type="text" id="num2" placeholder="두 번째 숫자" required />
+      <br />
+      <input type="submit" value="더하기" />
+    </form>
+    <div id="result"></div>
+
+    <script>
+      function addNumbers() {
+        const num1 = document.getElementById("num1").value;
+        const num2 = document.getElementById("num2").value;
+
+        // URL 생성: num1과 num2를 쿼리 문자열로 추가
+        const url = `/cgi-bin/adder?${num1}&${num2}`;
+
+        // Fetch API를 사용하여 GET 요청 보내기
+        fetch(url)
+          .then((response) => {
+            if (!response.ok) throw new Error("Network response was not ok");
+            return response.text();
+          })
+          .then((result) => {
+            // 결과를 페이지에 표시
+            document.getElementById("result").innerHTML = result;
+          })
+          .catch((error) => {
+            console.error(
+              "There was a problem with the fetch operation:",
+              error
+            );
+            document.getElementById("result").innerHTML =
+              "오류가 발생했습니다. 다시 시도해 주세요.";
+          });
+
+        return false; // 기본 폼 제출 방지
+      }
+    </script>
   </body>
 </html>
